Fixed overflow weirdness with left column collapse

--- a/src/components/MtG/MtGRando/styles.module.scss
+++ b/src/components/MtG/MtGRando/styles.module.scss
@@ -112,6 +112,7 @@
     overflow: hidden;
     flex: 0.0001;
     max-height: 500px;
+    opacity: 0;
   }
 
   .right-col {
